# RAD-Lab-Agbot

./: Agbot_Full_tf2_ViewFrames.gv  To map a PS3 controller.odt  frames_2024-10-01_11.52.20.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/agbot_arm_controller/: CMakeLists.txt  agbot_arm_controller.xml  package.xml
src/agbot_arm_controller/launch/: controller.launch.py
src/agbot_arm_setup_moveit/: .setup_assistant  CMakeLists.txt
src/agbot_arm_setup_moveit/config/: agbot_arm.srdf  joint_limits.yaml
src/agbot_arm_setup_moveit/launch/: move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py
src/agbot_bringup/: CMakeLists.txt  agbot_gazebo.launch.xml
src/agbot_bringup/launch/: agbot_arm_gazebo.launch.py  agbot_gazebo.launch.xml  agbot_sim_launch.py
src/agbot_cartographer/: CMakeLists.txt  package.xml
src/agbot_cartographer/launch/: cartographer.launch.py
src/agbot_controller/: CMakeLists.txt  agbot_controller.xml
src/agbot_controller/config/: agbot_controllers.yaml  old_agbot_controllers.yaml
src/agbot_controller/launch/: controller.launch.py
src/agbot_controller/src/: agbot_interface.cpp
src/agbot_cpp/: CMakeLists.txt
src/agbot_cpp/src/: agbot_arm_moveit_interface.cpp  simple_lifecycle_node.cpp  simple_moveit_interface.cpp  test_moveit_interface.cpp
src/agbot_description/: CMakeLists.txt  package.xml
src/agbot_description/launch/: agbot_arm_display.launch.py  agbot_arm_extender_display.launch.py  agbot_arm_gazebo.launch.py  agbot_display.launch.py  robot_state_publisher.launch.py
src/agbot_full_cartogropher/: CMakeLists.txt
src/agbot_full_controller/: CMakeLists.txt  package.xml
src/agbot_full_description/: CMakeLists.txt
src/agbot_full_moveit/: CMakeLists.txt
src/agbot_full_moveit_setup/: .setup_assistant  CMakeLists.txt
src/agbot_full_nav2/: CMakeLists.txt  package.xml
src/agbot_moveit/: CMakeLists.txt  package.xml
src/agbot_msgs/: CMakeLists.txt
src/agbot_navigation/: CMakeLists.txt  package.xml
src/agbot_params/: nav2_params.yaml
src/agbot_py/: setup.cfg  setup.py
src/agbot_teleop/: package.xml  setup.cfg  setup.py
(+285 files in other folders)
